# hackathon-eagle-eye-agentic-backend

./: .gitignore
Agentic Backend/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
Agentic Backend/agentic_application/: __init__.py  check_inq.py  config.py  entrypoint.py
Agentic Backend/agentic_application/agents/: __init__.py  market_analyzer_agent.py  policy_reviewer_agent.py  summary_generator_agent.py  supervisor_agent.py  verification_analyzer_agent.py
Agentic Backend/agentic_application/prompts/: __init__.py  market_analyzer_prompt.py  policy_reviewer_prompt.py  summary_generator_prompt.py  supervisor_prompt.py  verification_analyzer_prompt.py
Agentic Backend/agentic_application/rag/: main_rag.py
MCP Server/: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
MCP Server/tools/: __init__.py  fetch_benchmark_rates.py  fetch_loan_details.py  fetch_sofr_rates.py  policies_rag_tool.py
